{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 92,
  "lineage": "3031f2de-1841-bf2e-a29c-ef8616caba7b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00223fdf00dd4fd79",
            "arn": "arn:aws:ec2:ca-central-1:952633946680:instance/i-01558f906e37ff335",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-01558f906e37ff335",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-056b8039bc1527124",
            "private_dns": "ip-172-31-15-32.ca-central-1.compute.internal",
            "private_ip": "172.31.15.32",
            "public_dns": "ec2-35-183-179-238.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.183.179.238",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0812f7d49530b6883",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "test Security group20191029055136105800000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7d8b3c07",
            "tags": {
              "Name": "instancedemo-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01d71d64123c8cfe2"
            ]
          },
          "depends_on": [
            "aws_security_group.tf_test_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_test_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:952633946680:security-group/sg-01d71d64123c8cfe2",
            "description": "allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d71d64123c8cfe2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "test Security group20191029055136105800000001",
            "name_prefix": "test Security group",
            "owner_id": "952633946680",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "terraform SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-8cafdae4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_tf_test_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3961806877",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01d71d64123c8cfe2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.tf_test_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_tf_test_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1347951727",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01d71d64123c8cfe2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.tf_test_sg"
          ]
        }
      ]
    }
  ]
}